--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
     background: linear-gradient(to right, #aba7a2, #e2dfdc, #b4b2b1);
-    padding: 20px; /* Add padding around the edges of the site */
+    padding: 40px 20px 20px 20px; /* Add padding around the edges of the site, including more padding at the top */
 }
 
 .about-row {
